@@ -6,6 +6,7 @@
 
 - Ensure that modification hooks are never inhibited during field modification,
   which is needed for lsp-mode in order to keep the server synchronized.
+- Support user elements which manipulate the Tempel state.
 
 * Version 0.7 (2023-02-15)
 
